--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,8 +31,11 @@
             <% if can? :production_assign, product %>
               <%= link_to 'Assign to Production', production_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to production?" } %>
             <% end %>
+            <% if can? :marketing_assign, product %>
+              <%= link_to 'Assign to Marketing', marketing_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to marketing?" } %>
+            <% end %>
             <% if can? :print_assign, product %>
-              <%= link_to 'Generate QR code', print_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to print?" } %>
+              <%= link_to 'Assign to Print', print_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to print?" } %>
             <% end %>
             <% if can? :update, Product %>
               <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-success' %>
