--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,7 +35,7 @@
               <%= link_to 'Assign to Marketing', marketing_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to marketing?" } %>
             <% end %>
             <% if can? :print_assign, product %>
-              <%= link_to 'Assign to Print', print_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to print?" } %>
+              <%= link_to 'Generate QR Code', print_assign_product_url(product), method: :put, class: 'btn btn-sm btn-light', data: { confirm: "Are you sure you want to assign #{product.name} to print?" } %>
             <% end %>
             <% if can? :update, Product %>
               <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-sm btn-success' %>
