--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,18 +8,28 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file"></span>
-              Orders
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="<%= products_url %>">
-          <span data-feather="shopping-cart"></span>
-            Products
-        </a>
-      </li>
+      <% if can? :read, MasterList %>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= master_lists_url %>">
+            <span data-feather="file"></span>
+              Master Lists
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= master_lists_url(archived: true) %>">
+            <span data-feather="file"></span>
+              Archived Master Lists
+          </a>
+        </li>
+      <% end %>
+      <% if can? :read, Product %>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= products_url %>">
+            <span data-feather="shopping-cart"></span>
+              Products
+          </a>
+        </li>
+      <% end %>
       <li class="nav-item">
         <a class="nav-link" href="#">
           <span data-feather="users"></span>
